# mozci-tools

./: .isort.cfg  .pre-commit-config.yaml  .taskcluster.yml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
citools/: console.py  dump_failures.py  test_triage_bug_filer.py
citools/console/: application.py
citools/console/commands/: config.py  migration.py  push.py
docs/: Makefile  conf.py  dump_failures.rst  index.rst
tmtools/: console.py  dump_failures.py  test_triage_bug_filer.py
