[tool.poetry]
name = "test-management-tools"
version = "0.1.0"
description = "A suite of tools to assist with test migrations in Firefox's CI"
authors = ["Your Name <you@example.com>"]
license = "MPL-2.0"
packages = [
  { include = "tmtools" },
]


[tool.poetry.dependencies]
python = "^3.7"
mozci = "^2.0.3"
python-bugzilla = "^3.1.0"
unidiff = "^0.7.0"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
pytest = "^6.2.5"

[tool.poetry.scripts]
tmtools = 'tmtools.console:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
